[project]
name = "stellrent-response"
version = "0.0.5"
authors = [
  { name="Marcus Rodrigues Magalhães", email="marcusrodrigues.magalhaes@stellantis.com" },
]
readme = "README.md"
# license = 'MIT'
requires-python = '>=3.7'
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Framework :: Pytest',
    'Topic :: Software Development :: Libraries :: Python Modules'
]

[tool.pytest.ini_options]
testpaths = ['tests']
filterwarnings = 'error'
xfail_strict = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/stellrent/stellrent-response"
Issues = "https://github.com/stellrent/stellrent-response/issues"