[project]
name = "stellrent_response"
version = "1.3.0"
authors = [
  { name="Marcus Rodrigues Magalhães", email="marcusrodrigues.magalhaes@stellantis.com" },
]
readme = "README.md"
# license = 'MIT'
requires-python = '>=3.9'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'Natural Language :: English', 
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Framework :: Flask',
    'Topic :: Internet :: WWW/HTTP'
]

[tool.pytest.ini_options]
testpaths = ['tests']
filterwarnings = 'error'
xfail_strict = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/stellrent/stellrent-response"
Issues = "https://github.com/stellrent/stellrent-response/issues"